File uploader works, need to finish it for permanent use.